[package]
name = "seek_ecs_tilemap"
description = "Tilemap renderer experiment for Bevy with the goal of reducing CPU overhead. Mostly API-compatible with `bevy_ecs_tilemap`."
version = "0.1.1"
authors = ["Ida Iyes"]
homepage = "https://github.com/TheSeekerGame/seek_ecs_tilemap"
repository = "https://github.com/TheSeekerGame/seek_ecs_tilemap"
edition = "2021"

[features]
default = ["render"]
atlas = []
render = [
    "bevy/bevy_asset",
    "bevy/bevy_render",
    "bevy/bevy_core_pipeline",
]
serde = ["dep:serde"]

[dependencies]
bitflags = "2.5.0"
serde = { version = "1", features = ["derive"], optional = true }
rand = "0.8"

[dependencies.bevy]
version = "0.13"
default-features = false

[dev-dependencies.bevy]
version = "0.13"
default-features = true
features = [
    "x11",
    "wayland",
]

[profile.dev]
opt-level = 3
